--- a/src/kivygui/app.kv
+++ b/src/kivygui/app.kv
@@ -1,5 +1,3 @@
-#:kivy 1.11
-
 # Copyright (C) 2020 Respyrator
 # This file is part of Respyrator <https://respyrator.github.io>.
 #
@@ -16,9 +14,10 @@
 # You should have received a copy of the GNU General Public License
 # along with Respyrator.  If not, see <http://www.gnu.org/licenses/>.
 
-# :import colors .kivyconfig.colors
-# :import imgs .kivyconfig.imgs
-# :import txts .kivyconfig.txts
+#:kivy 1.11.1
+#:import colors src.kivygui.kivyconfig.colors
+#:import imgs src.kivygui.kivyconfig.imgs
+#:import txts src.kivygui.kivyconfig.txts
 
 <GuiManager>:
     id: gui_manager
