--- a/src/kivygui/loadingscreen.kv
+++ b/src/kivygui/loadingscreen.kv
@@ -14,15 +14,15 @@
 # You should have received a copy of the GNU General Public License
 # along with Respyrator.  If not, see <http://www.gnu.org/licenses/>.
 
-#:kivy 1.11
+#:kivy 1.11.1
 
 <LoadingScreen>:
     name: 'loading_screen'
     id: loading_screen
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'cneter'
+        anchor_y: 'center'
         padding: 10
 
         Button:
-            text: 'Hola mundo saecio'
+            text: txts['loading_txt']
