--- a/src/kivygui/app.kv
+++ b/src/kivygui/app.kv
@@ -23,3 +23,11 @@
     id: gui_manager
     LoadingScreen:
         manager: gui_manager
+    ModesScreen:
+        manager: gui_manager
+    ParamsScreen:
+        manager: gui_manager
+    AlarmsScreen:
+        manager: gui_manager
+    MonitoringScreen:
+        manager: gui_manager
