--- a/src/kivygui/modesscreen.kv
+++ b/src/kivygui/modesscreen.kv
@@ -16,14 +16,14 @@
 
 #:kivy 1.11.1
 
-<LoadingScreen>:
-    name: 'loading_screen'
-    id: loading_screen
+<ModesScreen>:
+    name: 'modes_screen'
+    id: modes_screen
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'center'
         padding: 10
 
         Button:
-            text: txts['loading_txt']
+            text: txts['modes_modes']
             on_press: app.change_screen()
