--- a/respyratorgui/kivygui/loadingscreen.kv
+++ b/respyratorgui/kivygui/loadingscreen.kv
@@ -22,8 +22,7 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'center'
-        padding: 10
 
         Button:
             text: txts['loading_txt']
-            on_press: app.change_screen()
+            #on_press: app.change_screen()
