--- a/respyratorgui/kivygui/paramsscreen.kv
+++ b/respyratorgui/kivygui/paramsscreen.kv
@@ -22,8 +22,7 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'center'
-        padding: 10
 
         Button:
             text: txts['params_params']
-            on_press: app.change_screen()
+            #on_press: app.change_screen()
