--- a/respyratorgui/kivygui/paramsscreen.kv
+++ b/respyratorgui/kivygui/paramsscreen.kv
@@ -23,6 +23,5 @@
         anchor_x: 'center'
         anchor_y: 'center'
 
-        Button:
+        Label:
             text: txts['params_params']
-            #on_press: app.change_screen()
