rename to more precise names

--- a/respyratorgui/kivygui/app.kv
+++ b/respyratorgui/kivygui/app.kv
@@ -22,7 +22,7 @@
 <GuiContainer>:
     id: gui_container
     orientation: 'vertical'
-    sm: gui_content
+    content: gui_content
     tabs: gui_tabs
 
     GuiContent:
