--- a/respyratorgui/kivygui/tabs.kv
+++ b/respyratorgui/kivygui/tabs.kv
@@ -38,21 +38,21 @@
         group: 'tabs'
         state: 'normal'
         text: txts['modes_modes'].upper()
-        on_press: root.tab_modes_on()
+        on_press: app.ui_selected('modes')
 
     ToggleButton:
         id: params
         group: 'tabs'
         state: 'normal'
         text: txts['params_params'].upper()
-        on_press: root.tab_on(self)
+        on_press: app.ui_selected('params')
 
     ToggleButton:
         id: alarms
         group: 'tabs'
         state: 'normal'
         text: txts['alarms_alarms'].upper()
-        on_press: root.tab_on(self)
+        on_press: app.ui_selected('alarms')
 
     Label:
         text : ''
