--- a/respyratorgui/kivygui/paramsscreen.kv
+++ b/respyratorgui/kivygui/paramsscreen.kv
@@ -26,29 +26,49 @@
             size_hint_y: 1
             text: txts['params_params'].upper()
 
-        StackLayout:
+        #StackLayout:
+        #    size_hint_y: 9
+        #    orientation: 'lr-tb'
+        #    padding: 10
+        #    spacing: 10
+        GridLayout:
             size_hint_y: 9
-            orientation: 'lr-tb'
+            padding: 10
+            spacing: 10
+            cols: 3
+            rows: 3
 
             Param:
-                size_hint_y: 1
-                width: 40
+                #size_hint_y: 1
+                #width: 40
+                acronym: 'Vt'
 
-            Param:
-                size_hint_y: 1
-                width: 40
+            #Param:
+                #size_hint_y: 1
+                #width: 40
+            #    acronym: 'PEEP'
 
-            Param:
-                size_hint_y: 1
-                width: 40
+            #Param:
+                #size_hint_y: 1
+                #width: 40
+
+            #Param:
+                #size_hint_y: 1
+                #width: 40
+
+            #Param:
+                #size_hint_y: 1
+                #width: 40
 
 
 
 
 <Param@BoxLayout>:
     orientation: 'vertical'
-    txt: param_label.text
-    val: param_value.value
+    #txt: param_label.text
+    txt: 'Param'
+    val: 25
+    acronym: 'acr'
     canvas.before:
         Color:
             rgba: .5, .5, .5, 1
@@ -58,10 +78,14 @@
 
     Label:
         id: param_label
-        text: str(param_value.value)
+        #ext: str(param_value.value)
+        text: root.txt
 
     Slider:
         id: param_value
         min: -100
         max: 100
-        value: 25
+        value: root.val
+        #on_touch_up: print(f'{self.parent.acronym}: {self.value}')
+        #on_touch_up: root.get_value()
+        on_value: param_label.text = f'{root.txt}: {self.value:.2f} (units)'
