split app from gui

--- a/respyratorgui/kivygui/paramsscreen.kv
+++ b/respyratorgui/kivygui/paramsscreen.kv
@@ -28,12 +28,8 @@
             size_hint_y: 1
             text: txts['params_params'].upper()
 
-        #StackLayout:
-        #    size_hint_y: 9
-        #    orientation: 'lr-tb'
-        #    padding: 10
-        #    spacing: 10
         GridLayout:
+            id: params_layout 
             size_hint_y: 9
             padding: 10
             spacing: 10
