--- a/respyratorgui/kivygui/modesscreen.kv
+++ b/respyratorgui/kivygui/modesscreen.kv
@@ -19,6 +19,7 @@
 <ModesScreen>:
     name: 'modes_screen'
     id: modes_screen
+    modes_buttons_layout: modes_buttons_layout
     BoxLayout:
         orientation: 'vertical'
 
@@ -82,46 +83,109 @@
                     text: txts['modes_ventilation_spontaneous']
             # Control Buttons ---------------------------------------
             BoxLayout:
+                id: modes_buttons_layout
                 orientation: 'vertical'
                 size_hint_x: 5
-                # Buttons except last row
-                BoxLayout:
-                    orientation: 'horizontal'
-                    size_hint_y: 3
-                    # Buttons Control Preassure
-                    BoxLayout:
-                        orientation: 'vertical'
 
+                # Ventilation Control
+                VentilationButtonsLayout:
+                    id: ventilations_control
+                    # Control Pressure
+                    ControlButtonsLayout:
                         Button:
                             text: 'Control Presión'
                             on_press: root.mode_selected('pressure_control')
-
-                        Button:
-                            text: 'Asistido Presión'
-                            on_press: root.mode_selected('pressure_assisted')
-
-                        Button:
-                            text: 'Soporte Presión'
-                            on_press: root.mode_selected('pressure_support')
-                    # Buttons Control Volume
-                    BoxLayout:
-                        orientation: 'vertical'
-
+                    # Control Volume
+                    ControlButtonsLayout:
                         Button:
                             text: 'Control Volumen'
                             on_press: root.mode_selected('volume_control')
-
+                # Ventilation Assisted
+                VentilationButtonsLayout:
+                    id: ventilations_assisted
+                    # Control Pressure
+                    ControlButtonsLayout:
+                        Button:
+                            text: 'Asistido Presión'
+                            on_press: root.mode_selected('pressure_assisted')
+                    # Control Volume
+                    ControlButtonsLayout:
                         Button:
                             text: 'Asistido Volumen'
                             on_press: root.mode_selected('volume_assisted')
+                # Ventilation Support
+                VentilationButtonsLayout:
+                    id: ventilations_support
+                    # Control Pressure
+                    ControlButtonsLayout:
+                        Button:
+                            text: 'Soporte Presión'
+                            on_press: root.mode_selected('pressure_support')
+                    # Control Volume
+                    ControlButtonsLayout:
+                        Button:
+                            text: 'Soporte Volumen'
+                            on_press: root.mode_selected('volume_support')
+                # Ventilation Spontaneous
+                VentilationButtonsLayout:
+                    id: ventilations_spontaneous
+                    # Control Pressure
+                    ControlButtonsLayout:
+                        Button:
+                            text: 'Espontáneo Presión'
+                            on_press: root.mode_selected('pressure_spontaneous')
+                    # Control Volume
+                    ControlButtonsLayout:
+                        Button:
+                            text: 'Espontáneo Volumen'
+                            on_press: root.mode_selected('volume_spontaneous')
 
-                        BorderLabel:
-                            text: ''
-                # Buttons last row
-                Button:
-                    size_hint_y: 1
-                    text: 'Espontáneo'
-                    on_press: root.mode_selected('spontaneous')
+<VentilationButtonsLayout@BoxLayout>:
+    orientation: 'horizontal'
+    #size_hint_y: 1
+
+<ControlButtonsLayout@BoxLayout>:
+    orientation: 'vertical'
+
+
+
+#                # Buttons except last row
+#                BoxLayout:
+#                    orientation: 'horizontal'
+#                    size_hint_y: 3
+#                    # Buttons Control Preassure
+#                    BoxLayout:
+#                        orientation: 'vertical'
+#                        Button:
+#                            text: 'Control Presión'
+#                            on_press: root.mode_selected('pressure_control')
+#
+#                        Button:
+#                            text: 'Asistido Presión'
+#                            on_press: root.mode_selected('pressure_assisted')
+#
+#                        Button:
+#                            text: 'Soporte Presión'
+#                            on_press: root.mode_selected('pressure_support')
+#                    # Buttons Control Volume
+#                    BoxLayout:
+#                        orientation: 'vertical'
+#
+#                        Button:
+#                            text: 'Control Volumen'
+#                            on_press: root.mode_selected('volume_control')
+#
+#                        Button:
+#                            text: 'Asistido Volumen'
+#                            on_press: root.mode_selected('volume_assisted')
+#
+#                        BorderLabel:
+#                            text: ''
+#                # Buttons last row
+#                Button:
+#                    size_hint_y: 1
+#                    text: 'Espontáneo'
+#                    on_press: root.mode_selected('spontaneous')
 
 <BorderLabel@Label>:
     halign: 'center'
