loading dynamically params for a specific mode

--- a/respyratorgui/kivygui/paramsscreen.kv
+++ b/respyratorgui/kivygui/paramsscreen.kv
@@ -19,7 +19,7 @@
 <ParamsScreen>:
     name: 'params_screen'
     id: params_screen
-    params: params_layout
+    params_layout: params_layout
 
     BoxLayout:
         orientation: 'vertical'
@@ -35,30 +35,6 @@
             spacing: 10
             cols: 3
             rows: 3
-
-            Param:
-                #size_hint_y: 1
-                #width: 40
-                acronym: 'Vt'
-
-            #Param:
-                #size_hint_y: 1
-                #width: 40
-            #    acronym: 'PEEP'
-
-            #Param:
-                #size_hint_y: 1
-                #width: 40
-
-            #Param:
-                #size_hint_y: 1
-                #width: 40
-
-            #Param:
-                #size_hint_y: 1
-                #width: 40
-
-
 
 
 <Param@BoxLayout>:
