working on alarms

--- a/respyratorgui/kivygui/alarmsscreen.kv
+++ b/respyratorgui/kivygui/alarmsscreen.kv
@@ -19,9 +19,43 @@
 <AlarmsScreen>:
     name: 'alarms_screen'
     id: alarms_screen
-    AnchorLayout:
-        anchor_x: 'center'
-        anchor_y: 'center'
+    alarms_layout: alarms_layout
+
+    BoxLayout:
+        orientation: 'vertical'
 
         Label:
-            text: txts['alarms_alarms']
+            size_hint_y: 1
+            text: txts['alarms_alarms'].upper()
+
+        GridLayout:
+            id: alarms_layout 
+            size_hint_y: 9
+            padding: 10
+            spacing: 10
+            cols: 3
+            rows: 3
+
+
+<Alarm@BoxLayout>:
+    orientation: 'vertical'
+    alarm_label: alarm_label
+    alarm_value_min: alarm_value_min
+    alarm_value_max: alarm_value_max
+    canvas.before:
+        Color:
+            rgba: .5, .5, .5, 1
+        Line:
+            width: 2
+            rectangle: self.x, self.y, self.width, self.height
+
+    Label:
+        id: alarm_label
+
+    Slider:
+        id: alarm_value_min
+        on_value: root.set_text(self.value)
+
+    Slider:
+        id: alarm_value_max
+        on_value: root.set_text(self.value)
